busqueda por nombre de tipo de activo implementada. busquedas por campos de mongo ahora son por expresiones regulares case insensitive
